# aws-sam-fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  samconfig.toml.example  template.yaml
.github/workflows/: ci.yml  deployment.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: AppLink.vue  TheFilterBar.vue  TheNavbar.vue
frontend/src/composables/: uesApi.js
frontend/src/router/: index.js
frontend/src/stores/: filterStore.js  nobelLaureates.js  nobelPrizes.js
frontend/src/util/: loadPage.js
frontend/src/views/: HomeView.vue  NobelLaureatesView.vue  NobelPrizesView.vue
notebooks/: helium.ipynb
src/: requirements.txt
src/app/: frontend.py  http.py  main.py
src/app/api/: util.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: nobel_laureates.py  nobel_prizes.py
src/app/core/: config.py  metadata.py  tags.py  util.py
src/app/schemas/: base_model.py  gender.py  prize_category.py  prize_portion.py  prize_status.py  response_model.py
src/app/schemas/nobel_laureate/: __init__.py  base_model.py  compact_model.py  nobel_laureate.py  nobel_laureates_response.py
src/app/schemas/nobel_prize/: __init__.py  base_model.py  compact_model.py  nobel_prize.py  nobel_prizes_response.py
tests/e2e/: conftest.py  test_frontend.py
tests/unit/: conftest.py  test_docs.py  test_main.py
tests/unit/api/: conftest.py
tests/unit/api/data/: api_response_nobel_laureates.json  api_response_nobel_prizes.json  response_nobel_laureates.json  response_nobel_prizes.json
tests/unit/api/v1/endpoints/: test_nobel_laureates.py  test_nobel_prizes.py
tests/unit/core/: test_config.py
