[tool.poetry]
name = "aws-sam-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.103.1"
mangum = "^0.17.0"
pydantic = "<2.0.0"
pydash = "^7.0.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
httpx = "^0.25.0"

[tool.poetry.group.code-qa.dependencies]
black = "^23.9.1"
ruff = "^0.0.287"
pre-commit = "^3.4.0"
mypy = "^1.5.1"

[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = { extras = ["all"], version = "^2.25.1" }
uvicorn = "^0.23.2"
ipykernel = "^6.25.2"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q"]
pythonpath = ["src"]
testpaths = ["tests"]
cache_dir = "~/.cache/pytest"

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ["py311"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
select = [
    "E",   # flake8
    "F",   # flake8
    "W",   # flake8
    "B",   # flake8-bugbear
    "I",   # isort
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
]
ignore = [
    "PLR", # Design related pylint codes
]
typing-modules = ["mypackage._compat.typing"]
src = ["src"]
unfixable = [
    "T20",  # Removes print statements
    "F841", # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
line-length = 88
target-version = "py311"

[tool.ruff.isort]
force-sort-within-sections = true

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"__init__.py" = ["F401"]

[tool.mypy]
files = "src"
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
